New update on html file

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 <body>
   <main>
-    <section class="menu">
+    <div class="menu">
+      <h2></h2>
       <div class="container-menu">
         <img class="logosvg" src="images/logo.svg" alt="">
         <ul>
@@ -19,8 +20,9 @@
           <li><img class="iconsvg" src="images/icon-upload.svg" alt=""></li>
         </ul>
       </div>
-    </section>
-    <section class="status">
+    </div>
+    <div class="status">
+      <h2></h2>
       <div class="status-content">
         <p>You’ve used <b>815 GB</b> of your storage</p>
         <div class="status-bar">
@@ -38,7 +40,7 @@
         <h1>185</h1>
         <p> GB LEFT</p>
       </div>
-    </section>
+    </div>
   </main>
  <!--    of your storage
 
